add operating mode
buffered offences

defensive events

manage session changes based on operating modes

let fallback be session::session_manager

impl reward reporter and note author

send all buffered messages on mode becoming active

empty buffered

remove old name

add staking to rc mock (not compiling)

ahm test compiles but failing tests

all ahm test passes when ahc is set to active

add passive ah client to staking mock

checkpoint commit

minor

add staking classic to rc runtime

--- a/substrate/frame/staking-async/runtimes/rc/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/rc/Cargo.toml
@@ -62,6 +62,8 @@ pallet-beefy-mmr = { workspace = true }
 pallet-conviction-voting = { workspace = true }
 pallet-delegated-staking = { workspace = true }
 pallet-election-provider-multi-phase = { workspace = true }
+pallet-staking = { workspace = true }
+pallet-bags-list = { workspace = true }
 pallet-elections-phragmen = { workspace = true }
 pallet-fast-unstake = { workspace = true }
 pallet-grandpa = { workspace = true }
@@ -152,6 +154,7 @@ std = [
 	"pallet-authority-discovery/std",
 	"pallet-authorship/std",
 	"pallet-babe/std",
+	"pallet-bags-list/std",
 	"pallet-balances/std",
 	"pallet-beefy-mmr/std",
 	"pallet-beefy/std",
@@ -184,6 +187,7 @@ std = [
 	"pallet-session-benchmarking?/std",
 	"pallet-session/std",
 	"pallet-society/std",
+	"pallet-staking/std",
 	"pallet-staking-async-ah-client/std",
 	"pallet-staking-async-rc-client/std",
 	"pallet-state-trie-migration/std",
@@ -241,6 +245,7 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
 	"pallet-asset-rate/runtime-benchmarks",
 	"pallet-babe/runtime-benchmarks",
+	"pallet-bags-list/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
 	"pallet-beefy-mmr/runtime-benchmarks",
 	"pallet-conviction-voting/runtime-benchmarks",
@@ -269,6 +274,7 @@ runtime-benchmarks = [
 	"pallet-scheduler/runtime-benchmarks",
 	"pallet-session-benchmarking/runtime-benchmarks",
 	"pallet-society/runtime-benchmarks",
+	"pallet-staking/runtime-benchmarks",
 	"pallet-staking-async-ah-client/runtime-benchmarks",
 	"pallet-staking-async-rc-client/runtime-benchmarks",
 	"pallet-state-trie-migration/runtime-benchmarks",
@@ -303,6 +309,7 @@ try-runtime = [
 	"pallet-authority-discovery/try-runtime",
 	"pallet-authorship/try-runtime",
 	"pallet-babe/try-runtime",
+	"pallet-bags-list/try-runtime",
 	"pallet-balances/try-runtime",
 	"pallet-beefy-mmr/try-runtime",
 	"pallet-beefy/try-runtime",
@@ -330,6 +337,7 @@ try-runtime = [
 	"pallet-scheduler/try-runtime",
 	"pallet-session/try-runtime",
 	"pallet-society/try-runtime",
+	"pallet-staking/try-runtime",
 	"pallet-staking-async-ah-client/try-runtime",
 	"pallet-staking-async-rc-client/try-runtime",
 	"pallet-state-trie-migration/try-runtime",
