Moved all non-getter consts to parachains-common

--- a/bridges/chains/chain-cumulus/Cargo.toml
+++ b/bridges/chains/chain-cumulus/Cargo.toml
@@ -26,6 +26,7 @@ frame-support = { workspace = true }
 frame-system = { workspace = true }
 sp-api = { workspace = true }
 sp-std = { workspace = true }
+parachains-common = { workspace = true }
 
 # Polkadot Dependencies
 polkadot-primitives = { workspace = true }
