Add logic for AHM, move 10 dots

--- a/polkadot/node/doppelganger/consensus/Cargo.toml
+++ b/polkadot/node/doppelganger/consensus/Cargo.toml
@@ -28,6 +28,10 @@ polkadot-runtime-parachains = { workspace = true, default-features = true }
 cumulus-primitives-proof-size-hostfunction = { workspace = true, default-features = true }
 sp-io = { workspace = true, default-features = true }
 
+frame-system = { workspace = true, default-features = true }
+pallet-balances = { workspace = true, default-features = true }
+
+
 [features]
 default = ["std"]
 std = []
