fix westend-runtime-constants features
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/polkadot/runtime/westend/constants/Cargo.toml
+++ b/polkadot/runtime/westend/constants/Cargo.toml
@@ -39,6 +39,6 @@ std = [
 	"xcm-builder/std",
 	"xcm/std",
 ]
-
+runtime-benchmarks = []
 # Set timing constants (e.g. session period) to faster versions to speed up testing.
 fast-runtime = []
