--- a/cumulus/parachains/runtimes/collectives/collectives-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/collectives/collectives-westend/Cargo.toml
@@ -88,6 +88,7 @@ pallet-message-queue = { workspace = true }
 
 pallet-collator-selection = { workspace = true }
 pallet-collective-content = { workspace = true }
+pallet-optimistic-funding = { workspace = true }
 parachain-info = { workspace = true }
 parachains-common = { workspace = true }
 testnet-parachains-constants = { features = ["westend"], workspace = true }
