--- a/substrate/utils/frame/rpc/support/Cargo.toml
+++ b/substrate/utils/frame/rpc/support/Cargo.toml
@@ -19,6 +19,7 @@ codec = { workspace = true, default-features = true }
 frame-support = { workspace = true, default-features = true }
 jsonrpsee = { features = ["jsonrpsee-types"], workspace = true }
 sc-rpc-api = { workspace = true, default-features = true }
+scale-info = { workspace = true, default-features = true }
 serde = { workspace = true, default-features = true }
 sp-storage = { workspace = true, default-features = true }
 
