--- a/cumulus/pallets/ambassador-registration/Cargo.toml
+++ b/cumulus/pallets/ambassador-registration/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "pallet-optimistic-funding"
+name = "pallet-ambassador-registration"
 version = "0.1.0"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
-description = "Optimistic Funding pallet for the Polkadot Ambassador Fellowship Program"
+description = "Ambassador Fellowship registration pallet"
 homepage.workspace = true
 repository.workspace = true
 
@@ -15,24 +15,20 @@ workspace = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { features = ["derive"], workspace = true }
-scale-info = { features = ["derive"], workspace = true }
+codec = { features = ["derive"], workspace = true, default-features = false }
+scale-info = { features = ["derive"], workspace = true, default-features = false }
 
 # Substrate
-frame-benchmarking = { workspace = true, optional = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-node-primitives = { workspace = true }
-sp-runtime = { workspace = true }
-sp-std = { workspace = true }
-sp-io = { workspace = true }
-sp-core = { workspace = true }
+frame-benchmarking = { workspace = true, default-features = false, optional = true }
+frame-support = { workspace = true, default-features = false }
+frame-system = { workspace = true, default-features = false }
+sp-runtime = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
 
 [dev-dependencies]
-pallet-balances = { workspace = true }
-pallet-treasury = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
+pallet-balances = { workspace = true, default-features = false }
+sp-core = { workspace = true, default-features = false }
+sp-io = { workspace = true, default-features = false }
 
 [features]
 default = ["std"]
@@ -47,7 +43,6 @@ std = [
 	"sp-io/std",
 	"sp-core/std",
 	"pallet-balances/std",
-	"pallet-treasury/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
