--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -2,6 +2,7 @@
 name = "polkadot-sdk"
 description = "Polkadot SDK umbrella crate."
 license = "Apache-2.0"
+version = "2503.0.0"
 
 [features]
 default = ["std"]
